# dontbeeviltube

./: README.md  package-lock.json  package.json  pyproject.toml
db/: schema.sql
db/migrations/: 20240910233108_init.sql  20240915025804_flask.sql
dontbeeviltube/: config.py  data.py  database.py  log.py  search.py  server.py  user.py  util.py  video.py
dontbeeviltube/routes/: auth.py  search.py  static.py  watch.py
dontbeeviltube/static/: style.css
dontbeeviltube/templates/: base.html  home.html  login.html  logout.html  register.html  search.html  util.html  watch.html
