[tool.poetry]
name = "dontbeeviltube"
version = "0.1.0"
description = ""
authors = ["Radian LLC <contact+dontbeeviltube@radian.codes>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
