[tool.poetry]
name = "dontbeeviltube"
version = "0.1.0"
description = ""
authors = ["Radian LLC <contact+dontbeeviltube@radian.codes>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.3"
gunicorn = "^23.0.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.1"}
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
python-dotenv = "^1.0.1"
requests = "^2.33.0"
bcrypt = "^4.2.0"
dateparser = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
